# Hero_Fast_API

./: pyproject.toml
simple_hero_api/: main.py  model.py  settings.py
tests/: test_main.py
